--- a/paper/sections/_5-conclusion.tex
+++ b/paper/sections/_5-conclusion.tex
@@ -7,9 +7,9 @@ We have evolved a UGV so that it is better able to handle obstacles of varying s
 %
 Specifically, we compared and analyzed FSM and ANN controllers with and without obstacles in the environment.
 %
-Comparing these two techniques enabled us to propose a new hybrid controller that incorporates the advantages of both.
+In comparing these two techniques we were able to find design principles that incorporate the advantages of both.
 %
-Although a direction controller was straightforward to optimize, the complex dynamics associated with climbing over obstacles makes it more difficult to design a controller for extending the Adabot' struts.
+Although a direction controller is straightforward to optimize, the complex dynamics associated with climbing over obstacles makes it more difficult to design a controller for extending the Adabot' struts.
 %
 Our future work will focus on optimizing the hybrid controller and investigating different techniques for extending the struts.
 
