--- a/paper/sections/_6-acknowledgments.tex
+++ b/paper/sections/_6-acknowledgments.tex
@@ -1,5 +1,10 @@
-\begin{acks}
+\section{Acknowledgements}
 
-The authors would like to thank...
+This work was supported by NSF grant No.\ PHY-9723972.
 
-\end{acks}
+
+% \begin{acks}
+
+% The authors would like to thank...
+
+% \end{acks}
