--- a/paper/sections/_0-abstract.tex
+++ b/paper/sections/_0-abstract.tex
@@ -8,7 +8,7 @@
 % - What is not known about the subject and hence what the study intended to examine (or what the paper seeks to present)
 Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too monotonous for people. For example, UGVs can traverse arduous terrain in search of disaster victims.
 %
-However, it is difficult to design these system so that they perform well in a variety of different environments.
+However, it is difficult to design these systems so that they perform well in a variety of different environments.
 %
 %
 %
@@ -25,7 +25,7 @@ Evolved finite state machines (FSMs) and artificial neural networks (ANNs) are c
 % Results
 % The results section should be the longest part of the abstract and should contain as much detail about the findings as the journal word count permits.
 %
-Results show comparable performance between FSM and ANN controllers, but the evolved strategies differ.
+Results show comparable performance between FSM and ANN controllers but differing strategies.
 %
 % The final controller is designed to take advantage of both approaches: (1) the control system is no longer a black-box and can be predictably understood (unlike the ANN), and (2) it takes advantage of the continuous nature of an ANN.
 %
@@ -38,11 +38,9 @@ Results show comparable performance between FSM and ANN controllers, but the evo
 % - The perspective
 % UGVs are valuable in many domains, however, they must be designed to work in many different environments.
 %
-Furthermore, we show that a UGV's controller and physical characteristics can be effectively chosen by examining results from evolutionary optimization.
+Finally, we show that a UGV's controller and physical characteristics can be effectively chosen by examining results from evolutionary optimization.
 
 \end{abstract}
 
 
-
-
-% Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too monotonous for people. For example, UGVs can traverse arduous terrain in search of disaster victims. However, it is difficult to design these system so that they perform well in a variety of different environments. In this study, we evolve controllers and physical characteristics of a UGV with transformable wheels to improve its mobility in a simulated environment. The UGV's mission is to visit a sequence of coordinates while automatically handling obstacles of varying sizes by extending wheel struts radially outward from the center of each wheel. Evolved finite state machines (FSMs) and artificial neural networks (ANNs) are compared, and a set of controller design principles are gathered from analyzing these experiments. Results show comparable performance between FSM and ANN controllers, but the evolved strategies differ. Furthermore, we show that a UGV's controller and physical characteristics can be effectively chosen by examining results from evolutionary optimization.
+% Unmanned ground vehicles (UGVs) are well suited to tasks that are either too dangerous or too monotonous for people. For example, UGVs can traverse arduous terrain in search of disaster victims. However, it is difficult to design these systems so that they perform well in a variety of different environments. In this study, we evolve controllers and physical characteristics of a UGV with transformable wheels to improve its mobility in a simulated environment. The UGV's mission is to visit a sequence of coordinates while automatically handling obstacles of varying sizes by extending wheel struts radially outward from the center of each wheel. Evolved finite state machines (FSMs) and artificial neural networks (ANNs) are compared, and a set of controller design principles are gathered from analyzing these experiments. Results show comparable performance between FSM and ANN controllers but differing strategies. Finally, we show that a UGV's controller and physical characteristics can be effectively chosen by examining results from evolutionary optimization.
